src/sentry/static/sentry/less/group-detail.less
/**
* Group Detail
* ============================================================================
*/

.group-detail {
  position: relative;
  margin: 0 0 20px;
  clear: both;

  h3 {
    color: @gray-darkest;
    font-size: 22px;
    margin: 0 0 8px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    line-height: 1.1;

    em {
      font-style: normal;
      font-weight: 400;
      color: @70;
      font-size: 90%;
    }
  }

  .short-id {
    font-size: 17px !important;
    font-family: @font-family-code;
  }

  .event-message,
  .event-meta {
    line-height: 1.2;
  }

  .error-level,
  .event-type {
    padding: 0;
    border-radius: 2px;
    margin-right: 8px;
    display: inline-block;
    position: relative;
    top: 3px;
    .square(13px);
    text-indent: -9999em;
    display: inline-block;
    border-radius: 15px;
  }

  .event-meta {
    font-size: 80%;
    margin-top: 6px;
  }

  .event-annotation {
    display: inline-block;
    margin-left: 9px;
    font-size: 13px;
    line-height: 1;
    border-left: 1px solid lighten(@trim, 6);
    padding-left: 9px;
    height: 13px;

    a {
      color: lighten(@gray, 12);

      &:hover {
        color: @gray;
      }
    }
  }

  .count span {
    font-size: 22px;
    display: inline-block;
    line-height: 1.2;
  }

  .is-assigned {
    clear: both;
    text-align: right;
    font-size: 14px;
    padding-top: 7px;
  }

  .assigned-to {
    text-align: right;
    position: relative;

    .btn-group {
      float: right;
    }
  }

  .meta {
    margin: 0 0 15px;
    color: #949ea4;
  }

  .group-actions {
    margin-top: 15px;

    .btn-group {
      margin-right: 5px;
    }

    .more .icon-arrow-down {
      margin-left: 5px;
    }

    .icon-checkmark {
      font-size: 13px;
    }

    .group-resolve.active {
      background: @green;
      color: #fff;
      border-color: @green-dark;
      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
    }

    .group-bookmark .icon-star-solid {
      position: relative;
      top: 1px;
      margin-left: -1px;
      margin-right: -1px;
    }

    .group-bookmark.active {
      background: @yellow-orange;
      color: #fff;
      border-color: darken(@yellow-orange, 15);
      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
    }

    .group-remove:hover {
      color: #fff;
      background: @red;
      border-color: @red-dark;
      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
    }

    .clearfix;

    .id-label {
      background: #fff;
      max-width: 200px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .severity {
    display: inline-block;
    position: relative;
    top: -7px;
    padding: 0 10px;
  }

  .nav-tabs {
    margin-top: 20px;
    margin-bottom: 0;
  }

  // loading indicator for the group needs extra fixing up.
  .assignee-selector {
    display: inline-block;

    .loading {
      margin: 0;

      .loading-indicator {
        left: auto !important;
        right: 0 !important;
      }
    }
  }

  &:before {
    position: absolute;
    display: block;
    content: '';
    bottom: -1px;
    left: -40px;
    right: -40px;
    height: 1px;
    background: @trim;
  }
}

.seen-by {
  margin-top: 15px;
  float: right;

  ul {
    .list-unstyled;

    li:first-child {
      background: @white-darker;
      color: darken(@gray, 10);
      border-radius: 2px;
      .square(28px);
      line-height: 26px;
      text-align: center;

      .icon-eye {
        opacity: 0.4;
        position: relative;
        top: 2px;
      }
    }

    li {
      float: left;
      margin-left: 5px;

      .avatar {
        display: inline-block;
        position: relative;
        .square(28px);
      }
    }
  }
}

.group-notifications,
.group-privacy {
  float: left;
  margin: 22px 0 0 22px;
  font-size: 14px;

  a {
    color: @gray-dark;
    &:hover {
      color: @gray-darker;
    }
  }

  .icon {
    color: @gray-lighter;
    font-size: 16px;
    margin-right: 7px;
    position: relative;
    top: 1px;
  }

  &.on,
  &.on a:hover {
    .icon {
      color: @red;
      &:after {
        border-color: @red !important;
      }
    }
  }
}

.group-notifications {
  .icon {
    position: relative;
    &:before {
      content: '\e607';
    }
  }

  &.on,
  a:hover {
    .icon {
      color: @red;
    }
  }
}

.group-privacy {
  .icon {
    &:before {
      content: '\e007';
    }
  }

  &.on,
  a:hover {
    .icon {
      &:before {
        content: '\e008';
      }
    }
  }
}

// Group Overview

.group-stats-column {
  float: right;
}
/* ... */

